add okhttp document

--- a/okhttp/src/main/res/layout/activity_main.xml
+++ b/okhttp/src/main/res/layout/activity_main.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
-    tools:mContext="com.guoxiaoxing.okhttp.demo.MainActivity">
+    tools:context="com.guoxiaoxing.okhttp.demo.MainActivity">
 
     <Button
-        android:id="@+id/btn_send_get_request"
+        android:id="@+id/btn_async_request"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Get Request"
+        android:text="Async Request"
         android:textAllCaps="false" />
-
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
