--- a/leakcanary/src/main/res/layout/activity_main.xml
+++ b/leakcanary/src/main/res/layout/activity_main.xml
@@ -1,18 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:mContext="com.guoxiaoxing.leakcanary.demo.MainActivity">
+    android:orientation="vertical"
+    android:padding="16dp"
+    tools:context="com.guoxiaoxing.leakcanary.demo.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/btn_activity_leak"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="Activity Leak"
+        android:textAllCaps="false" />
 
-</android.support.constraint.ConstraintLayout>
+
+    <Button
+        android:id="@+id/btn_async_task"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Async Task Leak"
+        android:textAllCaps="false" />
+
+</LinearLayout>
